--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,7 +1,7 @@
 image:
-  file: Dockerfile
+  file: .gitpod.Dockerfile
   
 tasks:
-  - init: "chmod 777 set_env_vars.sh && ./set_env_vars.sh && cd backend && pip install -r requirements/dev.txt && flask db init && flask db migrate && fask db upgrade && cd ../frontend && yarn"
+  - init: "chmod 777 set_env_vars.sh && ./set_env_vars.sh && cd backend && pip install -r requirements/dev.txt && flask db init && flask db migrate && flask db upgrade && cd ../frontend && yarn"
     command: 'cd frontend && yarn run dev'
     command: 'cd backend && flask run --with-threads'
